# SRDP

./: .gitignore  CMakeLists.txt  CMakePresets.json  CppProperties.json  LICENSE  README.md
srdp_linux/: CMakeLists.txt  recursos.rc  resource.h  srdp_linux.cpp  srdp_linux.h
srdp_linux/codigoextra/incluir/: formato_dp.h  login.h
srdp_linux/codigoextra/src/: crypto.cpp  formato_dp.cpp  login.cpp
srdp_linux/crear/: SRDP_Informacion.json
srdp_linux/testvariado/: imprimirhola.cpp  imprimirhola.h
